--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel public/index.html --open",
-    "build": "parcel build public/index.html --no-source-maps"
+    "build": "parcel build public/index.html --no-source-maps",
+    "format": "elm-format src/Main.elm --yes"
   },
   "dependencies": {
     "elm": "^0.19.1-3",
-    "parcel-bundler": "^1.12.4",
-    "node-elm-compiler": "^5.0.4"
+    "node-elm-compiler": "^5.0.4",
+    "parcel-bundler": "^1.12.4"
+  },
+  "devDependencies": {
+    "elm-format": "^0.8.3"
   }
 }
