--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@emotion/styled": "^11.0.0",
     "@fontsource/lato": "^4.0.1",
     "@fontsource/merriweather": "^4.0.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^2.26.1",
