--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fontsource/merriweather": "^4.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
@@ -35,7 +36,8 @@
     "gatsby-source-filesystem": "^2.8.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-spring": "^8.0.27"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
