--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
-    "gatsby-plugin-eslint": "^2.0.8",
+    "eslint-webpack-plugin": "^2.5.0",
+    "gatsby-plugin-eslint": "^3.0.0",
     "prettier": "^2.2.1"
   }
 }
