--- a/package.json
+++ b/package.json
@@ -26,26 +26,26 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^2.26.1",
     "gatsby-plugin-emotion": "^5.1.0",
-    "gatsby-plugin-image": "^0.4.1",
+    "gatsby-plugin-image": "^0.7.1",
     "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-mdx": "^1.7.1",
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sharp": "^2.11.2",
     "gatsby-plugin-sitemap": "^2.9.0",
     "gatsby-source-filesystem": "^2.8.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-react": "^7.21.5",
-    "gatsby-plugin-eslint": "^2.0.8",
+    "eslint-webpack-plugin": "^2.5.0",
+    "gatsby-plugin-eslint": "^3.0.0",
     "prettier": "^2.2.1"
   }
 }
