--- a/.github/workflows/create-review-bucket.yml
+++ b/.github/workflows/create-review-bucket.yml
@@ -3,6 +3,14 @@ name: Create a bucket for the PR
 on:
   pull_request:
     types: [opened]
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'  
 
 jobs:
   create_env:
