--- a/.github/workflows/deploy-review-in-bucket.yml
+++ b/.github/workflows/deploy-review-in-bucket.yml
@@ -15,6 +15,9 @@ jobs:
         run: |
           yarn install
           yarn build
+      - name: Add robots.txt
+        run: |
+          echo "User-agent: *\nDisallow: /" > ./public/robots.txt
       - name: Deploy on S3 bucket
         run: |
           aws configure set aws_access_key_id ${{secrets.CELLAR_ADDON_KEY_ID}}
