--- a/.github/workflows/delete-review-bucket.yml
+++ b/.github/workflows/delete-review-bucket.yml
@@ -8,10 +8,12 @@ jobs:
   delete_env:
     name: Remove the bucket of the PR branch
     runs-on: ubuntu-20.04
+    env:
+      SUB_DOMAIN: ${{ github.head_ref }}-review
     steps:
       - name: Remove bucket
         run: |
           aws configure set aws_access_key_id ${{ secrets.CELLAR_ADDON_KEY_ID }}
           aws configure set aws_secret_access_key ${{ secrets.CELLAR_ADDON_KEY_SECRET }}
           aws configure set region ${{ secrets.CELLAR_ADDON_REGION }}
-          aws s3 rb s3://${{github.head_ref}} --force --endpoint-url ${{ secrets.CELLAR_ADDON_HOST }}
+          aws s3 rb s3://${{ env.SUB_DOMAIN }}.${{ secrets.DOMAIN_NAME }} --force --endpoint-url ${{ secrets.CELLAR_ADDON_HOST }}
