--- a/.github/workflows/deploy-review-in-bucket.yml
+++ b/.github/workflows/deploy-review-in-bucket.yml
@@ -38,4 +38,4 @@ jobs:
           aws configure set aws_access_key_id ${{secrets.CELLAR_ADDON_KEY_ID}}
           aws configure set aws_secret_access_key ${{secrets.CELLAR_ADDON_KEY_SECRET}}
           aws configure set region ${{ secrets.CELLAR_ADDON_REGION }}
-          aws s3 sync ./public s3://${{ env.SUB_DOMAIN }}.${{ secrets.DOMAIN_NAME }} --endpoint-url ${{ secrets.CELLAR_ADDON_HOST }} --acl public-read
+          aws s3 sync ./public s3://${{ env.SUB_DOMAIN }}.${{ secrets.DOMAIN_NAME }} --endpoint-url https://${{ secrets.CELLAR_ADDON_HOST }} --acl public-read
