--- a/.github/workflows/delete-review-bucket.yml
+++ b/.github/workflows/delete-review-bucket.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   delete_env:
-    name: Remove the bucket of the PR branch
+    name: Remove the bucket of the PR branch & DNS record
     runs-on: ubuntu-20.04
     env:
       SUB_DOMAIN: ${{ github.head_ref }}-review
@@ -17,3 +17,10 @@ jobs:
           aws configure set aws_secret_access_key ${{ secrets.CELLAR_ADDON_KEY_SECRET }}
           aws configure set region ${{ secrets.CELLAR_ADDON_REGION }}
           aws s3 rb s3://${{ env.SUB_DOMAIN }}.${{ secrets.DOMAIN_NAME }} --force --endpoint-url https://${{ secrets.CELLAR_ADDON_HOST }}
+
+      - name: Remove DNS record
+        run: |
+          curl \
+            -X DELETE \
+            -H "Authorization: ApiKey ${{ secrets.GANDI_API_KEY }}" \
+            https://api.gandi.net/v5/livedns/domains/${{ secrets.DOMAIN_NAME }}/records/${{ env.SUB_DOMAIN }}/CNAME
