--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^2.26.1",
     "gatsby-plugin-emotion": "^5.1.0",
+    "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-image": "^0.7.1",
     "gatsby-plugin-manifest": "^2.9.1",
     "gatsby-plugin-mdx": "^1.7.1",
