--- a/package.json
+++ b/package.json
@@ -22,30 +22,31 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "gatsby": "^3.0.0",
-    "gatsby-plugin-emotion": "^6.0.0",
+    "gatsby": "^4.1.4",
+    "gatsby-plugin-emotion": "^7.1.0",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
-    "gatsby-plugin-image": "^1.0.0",
-    "gatsby-plugin-manifest": "^3.0.0",
-    "gatsby-plugin-mdx": "^2.0.0",
-    "gatsby-plugin-react-helmet": "^4.0.0",
-    "gatsby-plugin-sharp": "^3.0.0",
-    "gatsby-plugin-sitemap": "^3.0.0",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.0.0",
+    "gatsby-plugin-image": "^2.1.2",
+    "gatsby-plugin-manifest": "^4.1.3",
+    "gatsby-plugin-mdx": "^3.1.3",
+    "gatsby-plugin-react-helmet": "^5.1.0",
+    "gatsby-plugin-sharp": "^4.1.3",
+    "gatsby-plugin-sitemap": "^5.1.1",
+    "gatsby-source-filesystem": "^4.1.2",
+    "gatsby-transformer-sharp": "^4.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.3",
+    "@babel/preset-react": "^7.16.0",
+    "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
-    "eslint-webpack-plugin": "^2.5.2",
-    "gatsby-plugin-eslint": "^3.0.0",
+    "eslint-webpack-plugin": "^3.1.1",
+    "gatsby-plugin-eslint": "^4.0.2",
     "prettier": "^2.2.1"
   }
 }
