--- a/.github/workflows/create-review-bucket.yml
+++ b/.github/workflows/create-review-bucket.yml
@@ -8,15 +8,17 @@ jobs:
   create_env:
     name: Create S3 bucket on Cellar & DNS record
     runs-on: ubuntu-20.04
-    env:
-      SUB_DOMAIN: ${{ github.head_ref }}-review
     steps:
+      - name: Define subdomain
+        id: subdomain-generator
+        run: echo "::set-output name=subdomain::$(echo ${{ github.head_ref }} |
+          sed 's/[^a-zA-Z0-9]//g')-review"
       - name: Create bucket
         run: |
           aws configure set aws_access_key_id ${{ secrets.CELLAR_ADDON_KEY_ID }}
           aws configure set aws_secret_access_key ${{ secrets.CELLAR_ADDON_KEY_SECRET }}
           aws configure set region ${{ secrets.CELLAR_ADDON_REGION }}
-          aws s3api create-bucket --bucket ${{ env.SUB_DOMAIN }}.${{ secrets.DOMAIN_NAME }} --acl public-read --endpoint-url https://${{ secrets.CELLAR_ADDON_HOST }} > /dev/null
+          aws s3api create-bucket --bucket ${{ steps.subdomain-generator.outputs.subdomain }}.${{ secrets.DOMAIN_NAME }} --acl public-read --endpoint-url https://${{ secrets.CELLAR_ADDON_HOST }} > /dev/null
 
       - name: Create DNS record
         run: |
@@ -26,7 +28,7 @@ jobs:
             -H "Content-Type: application/json" \
             -d '{
               "rrset_type": "CNAME",
-              "rrset_name": "${{ env.SUB_DOMAIN }}",
+              "rrset_name": "${{ steps.subdomain-generator.outputs.subdomain }}",
               "rrset_values": ["${{ secrets.CELLAR_ADDON_HOST }}."],
               "rrset_ttl": 1800
             }' \
@@ -39,4 +41,4 @@ jobs:
             ${{ github.event.pull_request.comments_url }} \
             -H "Content-Type: application/json" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            --data '{ "body": "🚀 Review app deployed on https://${{ env.SUB_DOMAIN }}.${{ secrets.DOMAIN_NAME }}/" }'
+            --data '{ "body": "🚀 Review app deployed on https://${{ steps.subdomain-generator.outputs.subdomain }}.${{ secrets.DOMAIN_NAME }}/" }'
