--- a/.github/workflows/delete-review-bucket.yml
+++ b/.github/workflows/delete-review-bucket.yml
@@ -8,19 +8,21 @@ jobs:
   delete_env:
     name: Remove the bucket of the PR branch & DNS record
     runs-on: ubuntu-20.04
-    env:
-      SUB_DOMAIN: ${{ github.head_ref }}-review
     steps:
+      - name: Define subdomain
+        id: subdomain-generator
+        run: echo "::set-output name=subdomain::$(echo ${{ github.head_ref }} |
+          sed 's/[^a-zA-Z0-9]//g')-review"
       - name: Remove bucket
         run: |
           aws configure set aws_access_key_id ${{ secrets.CELLAR_ADDON_KEY_ID }}
           aws configure set aws_secret_access_key ${{ secrets.CELLAR_ADDON_KEY_SECRET }}
           aws configure set region ${{ secrets.CELLAR_ADDON_REGION }}
-          aws s3 rb s3://${{ env.SUB_DOMAIN }}.${{ secrets.DOMAIN_NAME }} --force --endpoint-url https://${{ secrets.CELLAR_ADDON_HOST }}
+          aws s3 rb s3://${{ steps.subdomain-generator.outputs.subdomain }}.${{ secrets.DOMAIN_NAME }} --force --endpoint-url https://${{ secrets.CELLAR_ADDON_HOST }}
 
       - name: Remove DNS record
         run: |
           curl \
             -X DELETE \
             -H "Authorization: ApiKey ${{ secrets.GANDI_API_KEY }}" \
-            https://api.gandi.net/v5/livedns/domains/${{ secrets.DOMAIN_NAME }}/records/${{ env.SUB_DOMAIN }}/CNAME
+            https://api.gandi.net/v5/livedns/domains/${{ secrets.DOMAIN_NAME }}/records/${{ steps.subdomain-generator.outputs.subdomain }}/CNAME
