--- a/.github/workflows/deploy-review-in-bucket.yml
+++ b/.github/workflows/deploy-review-in-bucket.yml
@@ -8,9 +8,11 @@ jobs:
   build:
     name: Build & deploy Gatsby site
     runs-on: ubuntu-20.04
-    env:
-      SUB_DOMAIN: ${{ github.head_ref }}-review
     steps:
+      - name: Define subdomain
+        id: subdomain-generator
+        run: echo "::set-output name=subdomain::$(echo ${{ github.head_ref }} |
+          sed 's/[^a-zA-Z0-9]//g')-review"
       - name: Checkout sources
         uses: actions/checkout@v2
 
@@ -38,4 +40,4 @@ jobs:
           aws configure set aws_access_key_id ${{secrets.CELLAR_ADDON_KEY_ID}}
           aws configure set aws_secret_access_key ${{secrets.CELLAR_ADDON_KEY_SECRET}}
           aws configure set region ${{ secrets.CELLAR_ADDON_REGION }}
-          aws s3 sync ./public s3://${{ env.SUB_DOMAIN }}.${{ secrets.DOMAIN_NAME }} --endpoint-url https://${{ secrets.CELLAR_ADDON_HOST }} --acl public-read
+          aws s3 sync ./public s3://${{ steps.subdomain-generator.outputs.subdomain }}.${{ secrets.DOMAIN_NAME }} --endpoint-url https://${{ secrets.CELLAR_ADDON_HOST }} --acl public-read
