--- a/package.json
+++ b/package.json
@@ -53,7 +53,13 @@
     "gatsby-plugin-eslint": "^4.0.2",
     "jest": "^27.5.1",
     "jest-preset-gatsby": "^1.0.134",
+    "postcss-jsx": "^0.36.4",
+    "postcss-syntax": "^0.36.2",
     "prettier": "^2.2.1",
-    "react-test-renderer": "^18.0.0"
+    "react-test-renderer": "^18.0.0",
+    "stylelint": "^14.7.1",
+    "stylelint-a11y": "^1.2.3",
+    "stylelint-config-recess-order": "^3.0.0",
+    "stylelint-config-recommended": "^7.0.0"
   }
 }
