--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^4.1.4",
+    "gatsby-plugin-build-date": "^1.0.0",
     "gatsby-plugin-emotion": "^7.1.0",
     "gatsby-plugin-fontawesome-css": "^1.0.0",
     "gatsby-plugin-image": "^2.1.2",
