--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-image": "^2.1.2",
     "gatsby-plugin-manifest": "^4.1.3",
     "gatsby-plugin-mdx": "^3.15.2",
+    "gatsby-plugin-portal": "^1.0.7",
     "gatsby-plugin-react-helmet": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.3",
     "gatsby-plugin-sitemap": "^5.1.1",
@@ -52,6 +53,7 @@
     "eslint-plugin-jest": "^26.1.4",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-webpack-plugin": "^3.1.1",
     "gatsby-plugin-eslint": "^4.0.2",
     "jest": "^27.5.1",
